update to fix not working on mobile

--- a/story_start.css
+++ b/story_start.css
@@ -6,12 +6,14 @@ body {
   top: 10px;
   left: 10px;
   height: 600px;
+  display: block;
 }
 #villain {
   position: absolute;
   top: 90px;
   left: 800px;
   height: 500px;
+  display: block;
 }
 #lightning {
   position: absolute;
@@ -19,6 +21,7 @@ body {
   left: 290px;
   height: 120px;
   width: 120px;
+  display: block;
 }
 
 #button_play {
